Footer quasi finito

--- a/index.html
+++ b/index.html
@@ -42,16 +42,15 @@
                         <a href="#"><i class="fa-regular fa-folder"></i></a>
                     </div>
 
-                    <div class="col">
+                    <div class="col playerCol">
                         <i class="fa-solid fa-shuffle"></i>
                         <i class="fa-solid fa-backward-step"></i>
-                        <i class="fa-regular fa-circle-play"></i>                  
+                        <a href="#"><i class="fa-regular fa-circle-play"></i></a>                  
                         <i class="fa-solid fa-forward-step"></i>
                         <i class="fa-solid fa-arrow-rotate-right"></i>
                         <div class="sliderContainer">
                             0:25
-                            <input class="slider" type="range" min="0" max="100" value="50">
-                            
+                            <input class="slider" type="range" min="0" max="100">
                             4:35
                         </div>
                     </div>
@@ -61,7 +60,7 @@
                         <i class="fa-solid fa-desktop"></i>
                         <i class="fa-solid fa-volume-high"></i>
                         <div class="sliderContainer">
-                            <input class="slider" type="range" min="0" max="100" value="50">
+                            <input class="slider" type="range" min="0" max="100">
                         </div>
                     </div>
                 </div>
