--- a/index.html
+++ b/index.html
@@ -68,9 +68,11 @@
                 </div>
 
                 <div id="mainContent">
+
                     <div id="shadowBox">
                         <a href="#" id="upgradeButton"> EFFETTUA L'UPGRADE </a>       
                     </div>
+
                     <div class="row navRow">
                         <div class="col navCol">
                             <ul>
@@ -84,6 +86,7 @@
                         </div>
                         
                     </div>
+
                     <div class="containerText">
                         <h1>Recently played</h1>
                     </div>
@@ -91,12 +94,15 @@
                     <div class="row rowStart">
                         
                         <div class="col albumCol">
-                            <img class="albumImg" src="img/metal_lifting.jpg" alt="metal album">
+                            <a href="#">
+                                <img class="albumImg" src="img/metal_lifting.jpg" alt="metal album">
+                                <i class="fa-regular fa-circle-play"></i>
+                            </a> 
                             <h3>Heavy Metal</h3>
                             <span>Subtitle</span>
                         </div>
                         <div class="col albumCol">
-                            <img class="albumImg" src="img/stranger.jpeg" alt="stranger album">
+                            <a href="#"><img class="albumImg" src="img/stranger.jpeg" alt="stranger album"></a> 
                             <h3>Stranger Things, Vol.1(a Netflix Original Series Soundtrack)</h3>
                             <span>KyleDixon & Michael Stein</span>
                         </div>
