--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
                 <div id="sideBar">
                     <img id="logoImg" src="img/logo.svg" alt="logo">
+                    <img id="logoImgSmall" src="img/logo-small.svg" alt="secondo logo">
                     <div id="sideBarMenu">
                         <a class="noDecoration selectedIcon" href="#">
                             <img class="sideBarIcons" src="img/home.svg" alt="home icona">
